[package]
name = "tsc_hk_runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crepuscularity-web = "0.4.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document", "Element", "HtmlElement", "HtmlHeadElement", "Node", "Window",
    "EventTarget", "MouseEvent", "ClipboardEvent",
    "Navigator", "Clipboard", "CssStyleDeclaration",
] }

[workspace]
