[package]
name = "tsc_hk_runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crepuscularity-web = "0.4.10"
wasm-bindgen = "=0.2.126"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document", "Element", "HtmlElement", "HtmlHeadElement", "Node", "Window",
    "EventTarget", "MouseEvent", "ClipboardEvent",
    "Navigator", "Clipboard",
    "MutationObserver", "MutationObserverInit", "NodeList",
    "HtmlCollection",
] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[workspace]
